--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-<body>
-Empty
+  <head>
+    <title>Random 3DS Stuff</title>
+    <style src="css/style.css"></style>
+<body bgcolor="#303030">
+  <div class="header">test</div>
+  <div class="content">content test</div>
 </body>
 </html>
