--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Random 3DS Stuff</title>
-    <style src="css/style.css"></style>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
 <body bgcolor="#303030">
   <div class="header">test</div>
   <div class="content">content test</div>
