--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Random 3DS Stuff</title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/cyborg/bootstrap.min.css">
 <body bgcolor="#303030">
   <div class="header">test</div>
   <div class="content">content test</div>
