--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
     <title>Random 3DS Stuff</title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
 <body bgcolor="#303030">
+<div name="checkpoint">
+  <div class="header"> backing up a save to edit on a computer using CFW </div>
+<div class="content">
+1  :: Open Checkpoint (grey icon with flag)
+2  :: Click the game icon 
+3  :: Press "A"
+4  :: Make sure "New..." is highlighted and Touch backup
+5  :: If Checkpoint asks if you want to backup this save, click "Yes"
+6  :: Name the backup and press "OK"
+7  :: Turn the 3ds off and put the SD in a computer. 
+   ::  Your save is now in SD:/3ds/Checkpoint/saves/<game id>/<backup name>
+8  :: Copy the save somewhere safe.
+9  :: Edit the save on your SD using your chosen program
+10 :: Eject your SD card safely using whatever method your operating system has to do so
+11 :: Put your SD back into your 3ds and boot your 3ds
+12 :: Open Checkpoint
+13 :: Click the game
+14 :: Highlight your chosen save
+15 :: Click Restore
+16 :: Open the game and test your save
+17 :: If the save crashes the game or the game says that it is corrupted, copy the backed up save you made in step 7 back to the Checkpoint folder and repeat 10-13
+  </div>
+  </div>
   <div class="header">test</div>
   <div class="content">content test</div>
 </body>
