--- a/index.html
+++ b/index.html
@@ -4,28 +4,26 @@
    <link rel="stylesheet" type="text/css" href="css/style.css">
 <body bgcolor="#303030">
 <div name="checkpoint">
-  <div class="header"> backing up a save to edit on a computer using CFW </div>
-<div class="content">
-1  :: Open Checkpoint (grey icon with flag)
-2  :: Click the game icon 
-3  :: Press "A"
-4  :: Make sure "New..." is highlighted and Touch backup
-5  :: If Checkpoint asks if you want to backup this save, click "Yes"
-6  :: Name the backup and press "OK"
-7  :: Turn the 3ds off and put the SD in a computer. 
-   ::  Your save is now in SD:/3ds/Checkpoint/saves/<game id>/<backup name>
-8  :: Copy the save somewhere safe.
-9  :: Edit the save on your SD using your chosen program
-10 :: Eject your SD card safely using whatever method your operating system has to do so
-11 :: Put your SD back into your 3ds and boot your 3ds
-12 :: Open Checkpoint
-13 :: Click the game
-14 :: Highlight your chosen save
-15 :: Click Restore
-16 :: Open the game and test your save
-17 :: If the save crashes the game or the game says that it is corrupted, copy the backed up save you made in step 7 back to the Checkpoint folder and repeat 10-13
-  </div>
-  </div>
+  <h2> backing up a save to edit on a computer using CFW </h2>
+
+1  :: Open Checkpoint (grey icon with flag)<br>
+2  :: Click the game icon <br>
+3  :: Press "A"<br>
+4  :: Make sure "New..." is highlighted and Touch backup<br>
+5  :: If Checkpoint asks if you want to backup this save, click "Yes"<br>
+6  :: Name the backup and press "OK"<br>
+7  :: Turn the 3ds off and put the SD in a computer. <br>
+   ::  Your save is now in SD:/3ds/Checkpoint/saves/<game id>/<backup name><br>
+8  :: Copy the save somewhere safe.<br>
+9  :: Edit the save on your SD using your chosen program<br>
+10 :: Eject your SD card safely using whatever method your operating system has to do so<br>
+11 :: Put your SD back into your 3ds and boot your 3ds<br>
+12 :: Open Checkpoint<br>
+13 :: Click the game<br>
+14 :: Highlight your chosen save<br>
+15 :: Click Restore<br>
+16 :: Open the game and test your save<br>
+17 :: If the save crashes the game or the game says that it is corrupted, copy the backed up save you made in step 7 back to the Checkpoint folder and repeat 10-13<br>
   <div class="header">test</div>
   <div class="content">content test</div>
 </body>
