--- a/Apps/Checkpoint.html
+++ b/Apps/Checkpoint.html
@@ -1,1 +1,33 @@
+<html>
+  <head>
+    <title>Random 3DS Stuff</title>
+   <link rel="stylesheet" type="text/css" href="css/style.css">
+<body bgcolor="#303030">
+<article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
 
+<section class="page__content">
+  <h4> backing up a save to edit on a computer using CFW </h4>
+  <ol>
+    <li>Open Checkpoint (grey icon with flag)</li>
+    <li>Click the game icon </li>
+    <li>Press "A"</li>
+    <li>Make sure "New..." is highlighted and Touch backup</li>
+    <li>If Checkpoint asks if you want to backup this save, click "Yes"</li>
+    <li>Name the backup and press "OK"</li>
+    <li>Turn the 3ds off and put the SD in a computer. 
+      <ul><li>  Your save is now in SD:/3ds/Checkpoint/saves/[game id]/[backup name]</li></ul></li>
+    <li>Copy the save somewhere safe.</li>
+    <li>Edit the save on your SD using your chosen program</li>
+    <li>Eject your SD card safely using whatever method your operating system has to do so</li>
+    <li>Put your SD back into your 3ds and boot your 3ds</li>
+    <li>Open Checkpoint</li>
+    <li>Click the game</li>
+    <li>Highlight your chosen save</li>
+    <li>Click Restore</li>
+    <li>Open the game and test your save</li>
+    <li>If the save crashes the game or the game says that it is corrupted, copy the backed up save you made in step 7 back to the Checkpoint folder and repeat 10-13</li>
+  </ol>
+  </section>
+  </article>
+</body>
+</html>
