--- a/Apps/Checkpoint.html
+++ b/Apps/Checkpoint.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Random 3DS Stuff</title>
-   <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="../css/style.css">
 <body bgcolor="#303030">
 <article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
 
