--- a/Apps/Checkpoint.html
+++ b/Apps/Checkpoint.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" type="text/css" href="../css/style.css">
 <body bgcolor="#303030">
 <article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
-
+<div class="page__inner-wrap">
 <section class="page__content">
   <h4> backing up a save to edit on a computer using CFW </h4>
   <ol>
@@ -28,6 +28,7 @@
     <li>If the save crashes the game or the game says that it is corrupted, copy the backed up save you made in step 7 back to the Checkpoint folder and repeat 10-13</li>
   </ol>
   </section>
+  </div>
   </article>
 </body>
 </html>
