--- a/Apps/Checkpoint.html
+++ b/Apps/Checkpoint.html
@@ -2,7 +2,7 @@
   <head>
     <title>Random 3DS Stuff</title>
    <link rel="stylesheet" type="text/css" href="../css/style.css">
-<body bgcolor="#303030">
+<body>
 <article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
 <div class="page__inner-wrap">
 <section class="page__content">
