--- a/Apps/Checkpoint.html
+++ b/Apps/Checkpoint.html
@@ -2,7 +2,7 @@
   <head>
     <title>Random 3DS Stuff</title>
    <link rel="stylesheet" type="text/css" href="../css/style.css">
-<body>
+<body class="layout--single" style="margin-bottom: 176.208px;">
 <article class="page" itemscope="" itemtype="http://schema.org/CreativeWork">
 <div class="page__inner-wrap">
 <section class="page__content">
